--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Dictionary</string>
     <string name="can_t_get_result">cant get result</string>
+    <string name="title_activity_splash">SplashActivity</string>
 </resources>
